@@ -1,7 +1,6 @@
 package com.hfstudio.guidenh.guide.internal.extensions;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
@@ -90,7 +89,7 @@ import com.hfstudio.guidenh.integration.api.TagCompilerProvider;
 
 public class DefaultExtensions {
 
-    public static final List<Registration<?>> EXTENSIONS = Arrays.asList(
+    public static final List<Registration<?>> EXTENSIONS = List.of(
         new Registration<>(TagCompiler.EXTENSION_POINT, DefaultExtensions::tagCompilers),
         new Registration<>(SceneElementTagCompiler.EXTENSION_POINT, DefaultExtensions::sceneElementCompilers));
 
@@ -115,7 +114,7 @@ public class DefaultExtensions {
 
     public static List<TagCompiler> tagCompilers() {
         var compilers = new ArrayList<>(
-            Arrays.asList(
+            List.of(
                 new DivTagCompiler(),
                 new ATagCompiler(),
                 new KbdTagCompiler(),
@@ -179,7 +178,7 @@ public class DefaultExtensions {
     }
 
     public static List<SceneElementTagCompiler> sceneElementCompilers() {
-        return Arrays.asList(
+        return List.of(
             new EntityElementCompiler(),
             new BlockElementCompiler(),
             new ImportStructureElementCompiler(),
