@@ -1,7 +1,6 @@
 package com.hfstudio.guidenh.guide.internal.markdown;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import org.jetbrains.annotations.Nullable;
@@ -14,7 +13,7 @@ import com.hfstudio.guidenh.libs.mdast.mdx.model.MdxJsxFlowElement;
 import com.hfstudio.guidenh.libs.mdast.model.MdAstAnyContent;
 import com.hfstudio.guidenh.libs.mdast.model.MdAstText;
 
-public final class MarkdownRuntimeBlocks {
+public class MarkdownRuntimeBlocks {
 
     private MarkdownRuntimeBlocks() {}
 
@@ -147,7 +146,7 @@ public final class MarkdownRuntimeBlocks {
 
     private static List<String> splitTokens(String expression) {
         if (expression == null || expression.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<String> tokens = new ArrayList<>();
         StringBuilder current = new StringBuilder();
@@ -167,7 +166,7 @@ public final class MarkdownRuntimeBlocks {
                 continue;
             }
             if (Character.isWhitespace(ch) && !inQuotes) {
-                if (current.length() > 0) {
+                if (!current.isEmpty()) {
                     tokens.add(current.toString());
                     current.setLength(0);
                 }
@@ -175,7 +174,7 @@ public final class MarkdownRuntimeBlocks {
             }
             current.append(ch);
         }
-        if (current.length() > 0) {
+        if (!current.isEmpty()) {
             tokens.add(current.toString());
         }
         return tokens;
@@ -195,7 +194,7 @@ public final class MarkdownRuntimeBlocks {
     @Nullable
     private static ColorValue parseColor(String value) {
         String normalized = value != null ? value.trim() : "";
-        if (normalized.isEmpty() || !normalized.startsWith("#")) {
+        if (!normalized.startsWith("#")) {
             return null;
         }
         try {
